--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=blogdb
 SECRET_KEY=ThaiBinhQuocVietKey
+JWT_ISSUER=quocviet.vn
+JWT_AUDIENCE=quocviet.vn
